移除basedao