@@ -5,15 +5,15 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.test.context.ActiveProfiles;
+import org.springframework.transaction.annotation.Transactional;
 
+import java.util.Arrays;
 import java.util.Date;
-import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 
 @SpringBootTest
-@ActiveProfiles("test")
+@Transactional
 public class ApiAccountDaoTest {
 
     @Autowired
@@ -23,92 +23,61 @@ public class ApiAccountDaoTest {
 
     @BeforeEach
     public void setUp() {
-        // 清理测试数据
-        apiAccountDao.deleteAll();
-
-        // 创建测试API账户
+        // 创建测试账户实体
         testAccount = new ApiAccount();
-        testAccount.setName("测试API账户");
+        testAccount.setName("Test Account");
         testAccount.setAccessIp("127.0.0.1");
-        testAccount.setAppId("test-app-id");
-        testAccount.setAppSecret("test-app-secret");
+        testAccount.setAppId("test-app-id-123");
+        testAccount.setAppSecret("test-app-secret-123");
         testAccount.setEnable(true);
-        testAccount.setEndTime(new Date(System.currentTimeMillis() + 365 * 24 * 60 * 60 * 1000)); // 一年后过期
-        testAccount.setPerms(List.of("api:read", "api:write"));
+        testAccount.setEndTime(new Date(System.currentTimeMillis() + 3600000)); // 1小时后过期
+        testAccount.setPerms(Arrays.asList("read", "write"));
+
+        // 保存测试账户
         testAccount = apiAccountDao.save(testAccount);
     }
 
     @Test
     public void testSave() {
-        ApiAccount account = new ApiAccount();
-        account.setName("新测试API账户");
-        account.setAccessIp("192.168.1.1");
-        account.setAppId("new-test-app-id");
-        account.setAppSecret("new-test-app-secret");
-        account.setEnable(true);
-        account.setEndTime(new Date(System.currentTimeMillis() + 365 * 24 * 60 * 60 * 1000)); // 一年后过期
-        account.setPerms(List.of("api:read"));
+        // 测试保存账户
+        ApiAccount newAccount = new ApiAccount();
+        newAccount.setName("New Test Account");
+        newAccount.setAccessIp("127.0.0.2");
+        newAccount.setAppId("new-test-app-id-456");
+        newAccount.setAppSecret("new-test-app-secret-456");
+        newAccount.setEnable(true);
+        newAccount.setEndTime(new Date(System.currentTimeMillis() + 7200000)); // 2小时后过期
+        newAccount.setPerms(Arrays.asList("read"));
 
-        ApiAccount savedAccount = apiAccountDao.save(account);
-        assertNotNull(savedAccount.getId());
-        assertEquals("新测试API账户", savedAccount.getName());
-        assertEquals("new-test-app-id", savedAccount.getAppId());
-    }
-
-    @Test
-    public void testDelete() {
-        String accountId = testAccount.getId();
-        apiAccountDao.delete(testAccount);
-
-        ApiAccount deletedAccount = apiAccountDao.findById(accountId);
-        assertNull(deletedAccount);
+        ApiAccount savedAccount = apiAccountDao.save(newAccount);
+        assertNotNull(savedAccount.getId(), "保存的账户应该有ID");
+        assertEquals(newAccount.getName(), savedAccount.getName(), "保存的账户名称应该与输入的名称一致");
+        assertEquals(newAccount.getAppId(), savedAccount.getAppId(), "保存的账户AppId应该与输入的AppId一致");
     }
 
     @Test
     public void testFindById() {
-        ApiAccount foundAccount = apiAccountDao.findById(testAccount.getId());
-        assertNotNull(foundAccount);
-        assertEquals("测试API账户", foundAccount.getName());
-
-        // 测试不存在的ID
-        ApiAccount nonExistentAccount = apiAccountDao.findById("non-existent-id");
-        assertNull(nonExistentAccount);
+        // 测试通过ID查找账户
+        ApiAccount foundAccount = apiAccountDao.findById(testAccount.getId()).orElse(null);
+        assertNotNull(foundAccount, "账户应该能通过ID找到");
+        assertEquals(testAccount.getId(), foundAccount.getId(), "找到的账户ID应该与查询的ID一致");
+        assertEquals(testAccount.getName(), foundAccount.getName(), "找到的账户名称应该与保存的名称一致");
+        assertEquals(testAccount.getAppId(), foundAccount.getAppId(), "找到的账户AppId应该与保存的AppId一致");
     }
 
     @Test
-    public void testExistsById() {
-        boolean exists = apiAccountDao.existsById(testAccount.getId());
-        assertTrue(exists);
-
-        // 测试不存在的ID
-        boolean nonExists = apiAccountDao.existsById("non-existent-id");
-        assertFalse(nonExists);
-    }
-
-    @Test
-    public void testCount() {
-        long count = apiAccountDao.count();
-        assertEquals(1, count);
-
-        // 添加一个账户后再次计数
-        ApiAccount newAccount = new ApiAccount();
-        newAccount.setName("计数测试API账户");
-        newAccount.setAccessIp("192.168.1.2");
-        newAccount.setAppId("count-test-app-id");
-        newAccount.setAppSecret("count-test-app-secret");
-        newAccount.setEnable(true);
-        newAccount.setEndTime(new Date(System.currentTimeMillis() + 365 * 24 * 60 * 60 * 1000)); // 一年后过期
-        apiAccountDao.save(newAccount);
-
-        long newCount = apiAccountDao.count();
-        assertEquals(2, newCount);
+    public void testDelete() {
+        // 测试删除账户
+        apiAccountDao.delete(testAccount);
+        ApiAccount foundAccount = apiAccountDao.findById(testAccount.getId()).orElse(null);
+        assertNull(foundAccount, "删除的账户不应该能通过ID找到");
     }
 
     @Test
     public void testFindAll() {
-        List<ApiAccount> accounts = apiAccountDao.findAll();
-        assertEquals(1, accounts.size());
-        assertEquals("测试API账户", accounts.get(0).getName());
+        // 测试查找所有账户
+        Iterable<ApiAccount> accounts = apiAccountDao.findAll();
+        assertNotNull(accounts, "查找所有账户应该返回非null值");
+        assertTrue(accounts.iterator().hasNext(), "查找所有账户应该返回至少一条记录");
     }
-
 }
